# AgentFlux

./: .gitignore  .gitmodules  README.md  test.sh
bash/: eval_judge.sh  evaluate.sh  finetune.sh  finetune_classifier.sh  finetune_tool_adaptors.sh
config/filesys/: classifier.json  mcpbench_fuzzing_template.txt  tool_adapters.json
config/monday/: judge_sys_prompt.txt
config/notion/: ground_truth.txt  judge_sys_prompt.txt
finetune/: data_prepare.py  gen_queries.py  gen_tool_template.py  gen_trajs.py  unsloth-cli-split.py
finetune/filesys/: query_generation_template.txt
finetune/monday/: query_generation_template.txt
finetune/notion/: query_generation_template.txt
finetune/scripts/: finetune.sh  finetune_classifier.sh  finetune_tool_adaptors.sh
inference/agentflux/: .gitignore  pyproject.toml  requirement.txt
orchestration-framework/: __init__.py
orchestration-framework/rena-core/examples/mcp-servers/hello-world/: README.md  pyproject.toml
orchestration-framework/rena-core/examples/mcp-servers/hello-world/src/mcp_server_hello_world/: __init__.py
orchestration-framework/rena-core/rena-browserd/browserd/: Cargo.toml  README.md
orchestration-framework/rena-core/rena-browserd/browserd-cli/: Cargo.toml  README.md
orchestration-framework/rena-core/rena-browserd/browserd-cli/src/: eval.rs  query.rs
orchestration-framework/rena-core/rena-browserd/browserd/src/: app_manager.rs  discovery.rs  event_processor.rs  lib.rs  orchestrator.rs  trace.rs
orchestration-framework/rena-core/rena-browserd/browserd/src/agent_protocol/: container.rs
orchestration-framework/rena-core/rena-browserd/browserd/src/app_registry/: rena.rs
orchestration-framework/rena-core/rena-browserd/browserd/src/container/: docker.rs  mod.rs
orchestration-framework/rena-core/rena-browserd/browserd/src/container_comm/: client.rs  mod.rs  server.rs
orchestration-framework/rena-core/rena-browserd/browserd/src/handler/: mod.rs
orchestration-framework/rena-core/rena-browserd/browserd/src/inference_engine/: mod.rs  openai.rs
orchestration-framework/rena-core/rena-runtime/: pyproject.toml
orchestration-framework/rena-core/rena-runtime/rena_runtime/: data_types.py  test_runtime.py  trace.py
orchestration-framework/rena-core/rena-runtime/rena_runtime/agent_protocol/: mcp.py
orchestration_framework/: __init__.py
orchestration_framework/rena-core/rena-browserd/: Cargo.toml  README.md
orchestration_framework/rena-core/rena-browserd/browserd/: build.rs
orchestration_framework/rena-core/rena-browserd/browserd-cli/src/: common.rs  main.rs  repl.rs
orchestration_framework/rena-core/rena-browserd/browserd-eval/: Cargo.toml  README.md  TRACE_EXPLANATIONS.md
orchestration_framework/rena-core/rena-browserd/browserd-eval/src/: config.rs  lib.rs  reporter.rs  trace_explainer.rs
orchestration_framework/rena-core/rena-browserd/browserd-eval/src/evaluators/: llm.rs
orchestration_framework/rena-core/rena-browserd/browserd/src/: config.rs  executor.rs
orchestration_framework/rena-core/rena-browserd/browserd/src/agent_protocol/: container_comm.rs  grpc_transport.rs  mod.rs
orchestration_framework/rena-core/rena-browserd/browserd/src/app_registry/: mod.rs
orchestration_framework/rena-core/rena-browserd/browserd/src/inference_engine/: anthropic.rs  ollama.rs
rena-core-proxy/: __init__.py
rena-eval-judge/: gen_queries.py  llm_gt_judge_score_success.py  run_baseline.py  run_proxy.py  run_start_end_rerun_ife_1_times_query.py  score.sh
rena-finetune/: data_prepare.py  gen_queries.py  gen_tool_template.py  gen_trajs.py  preprocess_dataset.py  unsloth-cli-split-unmask.py
(+117 files in other folders)
