[project]
name = "rena-runtime"
version = "0.0.1"
dependencies = [
    "pydantic==2.10.2",
    "mcp==1.6.0",
    "google-api-python-client==2.154.0",
    "grpcio==1.70.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rena_runtime"]
