[workspace]
resolver = "2"
members = ["browserd", "browserd-cli", "browserd-eval"]

[workspace.dependencies]
bollard = "0.18.1"
dotenv = "0.15"
error-stack = "0.5.0"
futures = "0.3.30"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
