[package]
name = "browserd"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.87"

bollard.workspace = true
clap = { version = "4.2.7", features = ["derive", "cargo"] }
dotenv.workspace = true
error-stack.workspace = true
futures = "0.3.30"
lazy_static = "1.5.0"
octocrab = "0.44.1"
prost = "0.13.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.44"
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.11"
tokio-util.workspace = true
tonic = "0.12.3"
tower = { version = "0.5", features = ["make"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
