[package]
name = "browserd-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.87"
browserd = { path = "../browserd" }
clap = { version = "4.2.7", features = ["derive", "cargo"] }
config = "0.15.11"
error-stack.workspace = true

futures.workspace = true
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.11"
tokio-util.workspace = true
tonic = "0.12.3"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
